lecture4/konsole1.txt
(base) C:\Users\Schiendorfer>python
Python 3.8.18 (default, Sep 11 2023, 13:39:12) [MSC v.1916 64 bit (AMD64)] :: Anaconda, Inc. on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> liste = []
>>> liste
[]
>>> len(liste)
0
>>> liste.append("Bananen")
>>> liste
['Bananen']
>>> liste.append("Äpfel")
>>> liste
['Bananen', 'Äpfel']
>>> liste.remove("Bananen")
>>> liste
['Äpfel']
>>> len(liste)
1
>>> liste.append("Bananen")
>>> len(liste)
2
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>> [ i for i in range(1, 5)]
[1, 2, 3, 4]
>>> [ 2*i for i in range(1, 5)]
[2, 4, 6, 8]
>>> [ "x" * i for i in range(1, 5)]
['x', 'xx', 'xxx', 'xxxx']
>>> [ i**2 for i in range(1, 5)]
[1, 4, 9, 16]
>>> [ "x" * i for i in range(1, 10)]
['x', 'xx', 'xxx', 'xxxx', 'xxxxx', 'xxxxxx', 'xxxxxxx', 'xxxxxxxx', 'xxxxxxxxx']
>>> fruits = ["Apfel", "Banane", "Kirsche", "Melone"]
>>> obst = fruits
>>> obst
['Apfel', 'Banane', 'Kirsche', 'Melone']
>>> obst_mit_a = [ for o in obst]
  File "<stdin>", line 1
    obst_mit_a = [ for o in obst]
                   ^
SyntaxError: invalid syntax
>>> obst_mit_a = [o for o in obst]
>>> obst_mit_a
['Apfel', 'Banane', 'Kirsche', 'Melone']
>>> obst_mit_a = [o+o for o in obst]
>>> obst_mit_a
['ApfelApfel', 'BananeBanane', 'KirscheKirsche', 'MeloneMelone']
>>> obst_mit_a = [o for o in obst if "a" in o]
>>> obst_mit_a
['Banane']
>>> obst_mit_a = [o for o in obst if "a" in o or "A" in o]
>>> obst_mit_a
['Apfel', 'Banane']
>>> x = [-14.7, 5.6, 7.8, -2.3]
>>> [v for v in x where v > 0]
  File "<stdin>", line 1
    [v for v in x where v > 0]
                  ^
SyntaxError: invalid syntax
>>> [v for v in x if v > 0]
[5.6, 7.8]
>>> preise = [10, 20, 100]
>>> [1.19 * preis for preis in preise]
[11.899999999999999, 23.799999999999997, 119.0]
